<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/slider_card"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:clickable="false"
                                    app:cardBackgroundColor="@color/BibliosColorPrimary"
                                    app:cardCornerRadius="0dp"
                                    app:cardElevation="5dp"
                                    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:background="@color/md_green_600"
            android:fontFamily="sans-serif-condensed"
            android:padding="8dp"
            android:text="Coming Soon!"
            android:textColor="@color/md_white_1000"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/book_img"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/coming_soon_book_slider"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/image"/>

        <TextView
            android:id="@+id/sp_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/book_img"
            android:layout_alignStart="@+id/book_name"
            android:layout_marginStart="14dp"
            android:text="@string/sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/mrp_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/sp_price_tv"
            android:layout_alignBottom="@+id/sp_price_tv"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/sp_price_tv"
            android:text="@string/mrp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/book_img"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="3"
            android:paddingBottom="8dp"
            android:text="@string/book_name"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>