<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:visibility="invisible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/membership_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/membership_image"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="Current Memebership Status:"
            android:textColor="@color/list_title_color"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/current_membership"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/membership_status"
            android:layout_marginStart="@dimen/left_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="Silver Membership"
            android:textColor="@color/list_title_color"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/current_membership_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_membership"
            android:layout_marginStart="@dimen/left_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/mem_details"
            android:textColor="@color/list_title_color"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/up_mem_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/membership_image"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/rbuttons"
            android:clickable="true"
            android:elevation="100dp"
            android:text="Upgrade"
            android:textColor="#ffffff"
            android:visibility="invisible"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_membership_message"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_margin"
                android:layout_marginStart="@dimen/left_margin"
                android:text="@string/books_purchased"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/total_books_purchased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_plus"
                android:layout_marginStart="@dimen/left_margin_plus"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="10"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:alpha="0.5"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_margin"
                android:layout_marginStart="@dimen/left_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="0.04"
                android:background="#ffffff"
                android:text="@string/up_req_books"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="18sp"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/required_books_upgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_plus"
                android:layout_marginStart="@dimen/left_margin_plus"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="20"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp"
                android:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:alpha="0.5"
                android:background="@android:color/darker_gray"
                android:visibility="visible"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/membership_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/silver1"/>
    </RelativeLayout>
</ScrollView>
